--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "common"]
 	path = common
 	url = https://github.com/frankaemika/libfranka-common.git
+[submodule "external/sara-shield"]
+	path = external/sara-shield
+	url = git@gitlab.lrz.de:cps-robotics/sara-shield.git
